--- a/templates/overtime_management.html
+++ b/templates/overtime_management.html
@@ -249,12 +249,7 @@
             <div class="row align-items-center">
                 <div class="col">
                     <h1><i class="bi bi-clock-history" style="color: #11998e;"></i> Overtime Management</h1>
-                    <p class="text-muted mb-0">13-Week Rolling Overtime Summary</p>
-                </div>
-                <div class="col-auto">
-                    <a href="{{ url_for('employee_import.upload_employees') }}" class="btn btn-primary">
-                        <i class="bi bi-upload"></i> Import OT Data
-                    </a>
+                    <p class="text-muted mb-0">13-Week Rolling Overtime Summary (from uploaded employee data)</p>
                 </div>
             </div>
         </div>
