--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -378,7 +378,7 @@
                     <span class="badge bg-{% if current_shift == 'day' %}warning{% else %}dark{% endif %}">
                         {{ current_shift|capitalize }} Shift
                     </span>
-                    <span class="text-muted mx-2">{{ shift_start.strftime('%H:%M') }} - {{ shift_end.strftime('%H:%M') }}</span>
+                    <span class="text-muted mx-2">{{ shift_start }} - {{ shift_end }}</span>
                 </div>
             </div>
             
